--- a/css/style.less
+++ b/css/style.less
@@ -16,6 +16,10 @@ main {
 
 			}
 
+			li:hover {
+				box-shadow: 0 6px 15px rgba(0, 1, 1, 0.25);
+			}
+
 			li:odd {
 				float: left;
 				padding-right: 100px;
