--- a/progress-vacation/style/style.css
+++ b/progress-vacation/style/style.css
@@ -5,6 +5,7 @@ body {
 }
 
 .intro {
+  padding-top: 40px;
   background-image: url("../img/hero_image.svg");
   background-color: #f9fafc;
   background-position: bottom center;
@@ -28,7 +29,7 @@ body {
   max-width: 500px;
   height: 50px;
   margin: auto;
-  border: 1px solid black;
+  box-shadow: 0 10px 40px 0 rgba(133,157,183,.12), 0 2px 9px 0 rgba(135,158,184,.06);
 }
 
 .progress-line {
